# page_controller

./: .gitignore  Cargo.toml
back/: .env  Cargo.toml  patchnote.md
back/src/: lib.rs  main.rs  montage.rs  process_table.rs  pytube.rs  tx.rs  utils.rs
back/tests/: health_test.rs
front/: Cargo.toml  index.html  tailwind.config.js
front/src/: home.rs  lib.rs  main.rs
front/src/components/: adder.rs  dm.rs  elements.rs  header.rs  inner.rs  keyform.rs  manualstatus.rs  mod.rs  patchnote.rs  spark.rs  win.rs
front/src/pages/: home.rs  mod.rs
front/static/: patchnote.md
shared/: Cargo.toml
shared/src/: consts.rs  lib.rs  models.rs
shared/src/api/: get_me_api.rs  health_api.rs  manual_upload_api.rs  mod.rs  patchnote_api.rs  status_api.rs
shared/tests/: resp_test.rs
