[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
reqwest = "0.12.5"
tokio = { version = "1.38.1", features = ["full"] }
shared = { path = "../shared/" }
actix-cors = "0.7.0"
markdown = "0.3.0"
serde_json = "1.0.122"
serde = { version = "1.0.205", features = ["derive"] }
inline-python = "0.12.0"
anyhow = "1.0.86"
dotenv = "0.15.0"
fb_poster = "0.1.8"
