[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
reqwest = "0.12.5"
# shared
shared = { path = "../shared" }
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "90356a7851d5222eecbd04a2a5b606ee4663d1a7", features = ["suspense"]}

[dependencies.web-sys]
version = "0.3.69"
features = ["Storage", "Window"]
