[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
reqwest = "0.12.5"
# shared
shared = { path = "../shared" }
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "b5ce9d57a23ede25a8fa1615b3cb07e3aa29fd3b", features = ["suspense"]}
# sycamore = { version = "0.9.0-beta.2", features = ["suspense"]}
# sycamore-router = "0.9.0-beta.2"

[dependencies.web-sys]
version = "0.3.69"
features = ["Storage", "Window"]
