[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
reqwest = "0.12.5"
# shared
shared = { path = "../shared" }
sycamore = { version = "0.9.0-beta.2", features = ["suspense"]}

[dependencies.web-sys]
version = "0.3.69"
features = ["Storage", "Window"]
